--- a/bundles/org.eclipse.orion.client.core/web/mixloginstatic/css/landing.css
+++ b/bundles/org.eclipse.orion.client.core/web/mixloginstatic/css/landing.css
@@ -28,6 +28,7 @@ input[type="button"]:active {
 	position:absolute;
 	width:100%;
 	background: #444;
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorStr='#444444', EndColorStr='black')"; /* IE9 */
 	background: -moz-linear-gradient(top, #444 0%, black 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#555), color-stop(100%,black));
 	background: -webkit-linear-gradient(top, #444 0%,black 100%);
